--- a/all.html
+++ b/all.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>new line</h1>
-    new line
-    new line redbean
+    new line new line redbean
     <div>shin</div>
+    new line F
   </body>
 </html>
