--- a/all.html
+++ b/all.html
@@ -6,9 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>new line</h1>
-    new line
-    new line redbean
+    <h1>shin</h1>
+    new line new line redbean
     <div>shin</div>
   </body>
 </html>
